// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JHipster app generator with default config should match snapshot 1`] = `
Object {
  "ANGULAR": "angular",
  "BUILD_DIR": "target/",
  "CLIENT_DIST_DIR": "target/classes/static/",
  "CLIENT_WEBPACK_DIR": "webpack/",
  "DIST_DIR": "target/classes/static/",
  "DOCKER_CONSUL": "consul:1.13.1",
  "DOCKER_CONSUL_CONFIG_LOADER": "jhipster/consul-config-loader:v0.4.1",
  "DOCKER_DIR": "src/main/docker/",
  "DOCKER_GRAFANA": "grafana/grafana:9.1.0",
  "DOCKER_JAVA_JRE": "eclipse-temurin:11-jre-focal",
  "DOCKER_JHIPSTER_CONTROL_CENTER": "jhipster/jhipster-control-center:v0.5.0",
  "DOCKER_JHIPSTER_REGISTRY": "jhipster/jhipster-registry:v7.4.0",
  "DOCKER_PROMETHEUS": "prom/prometheus:v2.38.0",
  "DOCKER_SONAR": "sonarqube:9.6.1-community",
  "DOCKER_SWAGGER_EDITOR": "swaggerapi/swagger-editor:latest",
  "DOCKER_ZIPKIN": "openzipkin/zipkin:2.23",
  "DOCKER_ZOOKEEPER": "confluentinc/cp-zookeeper:7.2.1",
  "DOCUMENTATION_ARCHIVE_PATH": "/documentation-archive/",
  "DOCUMENTATION_URL": "https://www.jhipster.tech",
  "HIBERNATE_VERSION": "5.6.10.Final",
  "JACKSON_DATABIND_NULLABLE_VERSION": "0.2.3",
  "JACOCO_VERSION": "0.8.8",
  "JAVA_COMPATIBLE_VERSIONS": Array [
    "11",
    "12",
    "13",
    "14",
    "15",
    "16",
    "17",
    "18",
  ],
  "JAVA_VERSION": "11",
  "JHIPSTER_DEPENDENCIES_VERSION": "7.9.4-SNAPSHOT",
  "LOGIN_REGEX": "^(?>[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\\\\\.[a-zA-Z0-9-]+)*)|(?>[_.@A-Za-z0-9-]+)$",
  "MAIN_DIR": "src/main/",
  "MAIN_SRC_DIR": "src/main/webapp/",
  "NODE_VERSION": "16.17.0",
  "NPM_VERSION": "8.19.2",
  "REACT": "react",
  "SERVER_MAIN_RES_DIR": "src/main/resources/",
  "SERVER_MAIN_SRC_DIR": "src/main/java/",
  "SERVER_TEST_RES_DIR": "src/test/resources/",
  "SERVER_TEST_SRC_DIR": "src/test/java/",
  "SPRING_BOOT_VERSION": "2.7.3",
  "TEST_DIR": "src/test/",
  "TEST_SRC_DIR": "src/test/javascript/",
  "VUE": "vue",
  "applicationType": "monolith",
  "applicationTypeGateway": false,
  "applicationTypeMicroservice": false,
  "applicationTypeMonolith": true,
  "authenticationType": "jwt",
  "authenticationTypeJwt": true,
  "authenticationTypeOauth2": false,
  "authenticationTypeSession": false,
  "backendType": "Java",
  "baseName": "jhipster",
  "buildDir": "target/",
  "buildTool": "maven",
  "buildToolGradle": false,
  "buildToolMaven": true,
  "buildToolUnknown": false,
  "builtInAuthority": true,
  "builtInUser": true,
  "cacheManagerIsAvailable": true,
  "cacheProvider": "ehcache",
  "cacheProviderCaffeine": false,
  "cacheProviderEhCache": true,
  "cacheProviderHazelcast": false,
  "cacheProviderInfinispan": false,
  "cacheProviderMemcached": false,
  "cacheProviderNo": false,
  "cacheProviderRedis": false,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "clientDistDir": "target/classes/static/",
  "clientFramework": "angular",
  "clientFrameworkAngular": true,
  "clientFrameworkAny": true,
  "clientFrameworkNo": false,
  "clientFrameworkReact": false,
  "clientFrameworkVue": false,
  "clientPackageManager": "npm",
  "clientSrcDir": "src/main/webapp/",
  "clientTestDir": "src/test/javascript/",
  "clientTheme": "none",
  "clientThemeDark": false,
  "clientThemeLight": false,
  "clientThemeNone": true,
  "clientThemePrimary": false,
  "clientThemeVariant": "",
  "communicationSpringWebsocket": false,
  "cucumberTests": false,
  "customizeDestination": [Function],
  "cypressTests": false,
  "dasherizedBaseName": "jhipster",
  "databaseType": "sql",
  "databaseTypeCassandra": false,
  "databaseTypeCouchbase": false,
  "databaseTypeMariadb": false,
  "databaseTypeMongodb": false,
  "databaseTypeMysql": false,
  "databaseTypeNeo4j": false,
  "databaseTypeNo": false,
  "databaseTypePostgres": true,
  "databaseTypeSql": true,
  "defaultEnvironment": "prod",
  "defaultPackaging": "jar",
  "devDatabaseType": "h2Disk",
  "devDatabaseTypeCouchbase": false,
  "devDatabaseTypeH2Any": true,
  "devDatabaseTypeH2Disk": true,
  "devDatabaseTypeH2Memory": false,
  "devDatabaseTypeMariadb": false,
  "devDatabaseTypeMssql": false,
  "devDatabaseTypeMysql": false,
  "devDatabaseTypeOracle": false,
  "devDatabaseTypePostgres": false,
  "devServerPort": 4200,
  "dockerContainers": Object {
    "elasticsearch": "'ELASTICSEARCH_VERSION'",
    "elasticsearchImage": "'ELASTICSEARCH_IMAGE_VERSION'",
    "elasticsearchTag": "'ELASTICSEARCH_TAG_VERSION'",
    "keycloak": "'KEYCLOAK_VERSION'",
    "keycloakImage": "'KEYCLOAK_IMAGE_VERSION'",
    "keycloakTag": "'KEYCLOAK_TAG_VERSION'",
    "postgres": "'POSTGRES_VERSION'",
    "postgresql": "'POSTGRESQL_VERSION'",
    "postgresqlImage": "'POSTGRESQL_IMAGE_VERSION'",
    "postgresqlTag": "'POSTGRESQL_TAG_VERSION'",
    "quay.io/keycloak/keycloak": "'QUAY_IO_KEYCLOAK_KEYCLOAK_VERSION'",
  },
  "dockerServicesDir": "src/main/docker/",
  "domains": Array [
    "com.mycompany.myapp",
  ],
  "dtoSuffix": "DTO",
  "embeddableLaunchScript": undefined,
  "enableGradleEnterprise": false,
  "enableHibernateCache": true,
  "enableI18nRTL": false,
  "enableLiquibase": true,
  "enableSwaggerCodegen": false,
  "enableTranslation": true,
  "endpointPrefix": "",
  "entitySuffix": "",
  "fakerSeed": undefined,
  "frontendAppName": "jhipsterApp",
  "gatewayServerPort": undefined,
  "gatlingTests": false,
  "gradleEnterpriseHost": "",
  "hipster": "jhipster_family_member_3",
  "humanizedBaseName": "JHipster",
  "incrementalChangelog": undefined,
  "javaDependencies": Object {
    "jib-maven-plugin": "'JIB-MAVEN-PLUGIN-VERSION'",
    "liquibase": "'LIQUIBASE-VERSION'",
  },
  "javaPackageSrcDir": "src/main/java/com/mycompany/myapp/",
  "javaPackageTestDir": "src/test/java/com/mycompany/myapp/",
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhiTablePrefix": "jhi",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": "7.9.3",
  "jwtSecretKey": Any<String>,
  "languages": Array [
    "en",
  ],
  "lowercaseBaseName": "jhipster",
  "mainClass": "JhipsterApp",
  "mainJavaDir": "src/main/java/",
  "mainJavaPackageDir": "src/main/java/com/mycompany/myapp/",
  "mainJavaResourceDir": "src/main/resources/",
  "messageBroker": false,
  "messageBrokerKafka": false,
  "microfrontend": false,
  "microfrontends": Array [],
  "nativeLanguage": "en",
  "nodeDestinationVersion": "16.17.0",
  "nodePackageManager": "npm",
  "otherModules": Array [],
  "packageFolder": "com/mycompany/myapp",
  "packageName": "com.mycompany.myapp",
  "pages": Array [],
  "prettierExtensions": "md,json,yml,html,cjs,mjs,js,ts,tsx,css,scss,java",
  "prettierJava": undefined,
  "prettierTabWidth": 2,
  "prodDatabaseType": "postgresql",
  "prodDatabaseTypeCouchbase": false,
  "prodDatabaseTypeH2Disk": false,
  "prodDatabaseTypeMariadb": false,
  "prodDatabaseTypeMongodb": false,
  "prodDatabaseTypeMssql": false,
  "prodDatabaseTypeMysql": false,
  "prodDatabaseTypeNeo4j": false,
  "prodDatabaseTypeOracle": false,
  "prodDatabaseTypePostgres": true,
  "projectDescription": "Description for jhipster",
  "projectVersion": "0.0.1-SNAPSHOT",
  "protractorTests": false,
  "reactive": false,
  "rememberMeKey": undefined,
  "remotes": Array [],
  "searchEngine": false,
  "searchEngineAny": false,
  "searchEngineCouchbase": false,
  "searchEngineElasticsearch": false,
  "serverPort": "8080",
  "serviceDiscoveryAny": false,
  "serviceDiscoveryConsul": false,
  "serviceDiscoveryEureka": false,
  "serviceDiscoveryType": false,
  "skipCheckLengthOfIdentifier": false,
  "skipClient": false,
  "skipCommitHook": undefined,
  "skipFakeData": false,
  "skipJhipsterDependencies": false,
  "skipServer": undefined,
  "skipUserManagement": false,
  "srcMainDir": "src/main/",
  "srcMainJava": "src/main/java/",
  "srcMainResources": "src/main/resources/",
  "srcMainWebapp": "src/main/webapp/",
  "srcTestDir": "src/test/",
  "srcTestJava": "src/test/java/",
  "srcTestJavascript": "src/test/javascript/",
  "srcTestResources": "src/test/resources/",
  "temporaryDir": "target/",
  "testFrameworks": Array [],
  "testJavaDir": "src/test/java/",
  "testJavaPackageDir": "src/test/java/com/mycompany/myapp/",
  "testResourceDir": "src/test/resources/",
  "testsNeedCsrf": false,
  "upperFirstCamelCaseBaseName": "Jhipster",
  "user": Any<Object>,
  "userPrimaryKeyTypeString": false,
  "userPrimaryKeyTypeUUID": false,
  "webappLoginRegExp": "^[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\\\\\.[a-zA-Z0-9-]+)*$|^[_.@A-Za-z0-9-]+$",
  "websocket": false,
  "withAdminUi": true,
}
`;

exports[`JHipster app generator with gateway should match snapshot 1`] = `
Object {
  "ANGULAR": "angular",
  "BUILD_DIR": "target/",
  "CLIENT_DIST_DIR": "target/classes/static/",
  "CLIENT_WEBPACK_DIR": "webpack/",
  "DIST_DIR": "target/classes/static/",
  "DOCKER_CONSUL": "consul:1.13.1",
  "DOCKER_CONSUL_CONFIG_LOADER": "jhipster/consul-config-loader:v0.4.1",
  "DOCKER_DIR": "src/main/docker/",
  "DOCKER_GRAFANA": "grafana/grafana:9.1.0",
  "DOCKER_JAVA_JRE": "eclipse-temurin:11-jre-focal",
  "DOCKER_JHIPSTER_CONTROL_CENTER": "jhipster/jhipster-control-center:v0.5.0",
  "DOCKER_JHIPSTER_REGISTRY": "jhipster/jhipster-registry:v7.4.0",
  "DOCKER_PROMETHEUS": "prom/prometheus:v2.38.0",
  "DOCKER_SONAR": "sonarqube:9.6.1-community",
  "DOCKER_SWAGGER_EDITOR": "swaggerapi/swagger-editor:latest",
  "DOCKER_ZIPKIN": "openzipkin/zipkin:2.23",
  "DOCKER_ZOOKEEPER": "confluentinc/cp-zookeeper:7.2.1",
  "DOCUMENTATION_ARCHIVE_PATH": "/documentation-archive/",
  "DOCUMENTATION_URL": "https://www.jhipster.tech",
  "HIBERNATE_VERSION": "5.6.10.Final",
  "JACKSON_DATABIND_NULLABLE_VERSION": "0.2.3",
  "JACOCO_VERSION": "0.8.8",
  "JAVA_COMPATIBLE_VERSIONS": Array [
    "11",
    "12",
    "13",
    "14",
    "15",
    "16",
    "17",
    "18",
  ],
  "JAVA_VERSION": "11",
  "JHIPSTER_DEPENDENCIES_VERSION": "7.9.4-SNAPSHOT",
  "LOGIN_REGEX": "^(?>[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\\\\\.[a-zA-Z0-9-]+)*)|(?>[_.@A-Za-z0-9-]+)$",
  "MAIN_DIR": "src/main/",
  "MAIN_SRC_DIR": "src/main/webapp/",
  "NODE_VERSION": "16.17.0",
  "NPM_VERSION": "8.19.2",
  "REACT": "react",
  "SERVER_MAIN_RES_DIR": "src/main/resources/",
  "SERVER_MAIN_SRC_DIR": "src/main/java/",
  "SERVER_TEST_RES_DIR": "src/test/resources/",
  "SERVER_TEST_SRC_DIR": "src/test/java/",
  "SPRING_BOOT_VERSION": "2.7.3",
  "TEST_DIR": "src/test/",
  "TEST_SRC_DIR": "src/test/javascript/",
  "VUE": "vue",
  "applicationType": "gateway",
  "applicationTypeGateway": true,
  "applicationTypeMicroservice": false,
  "applicationTypeMonolith": false,
  "authenticationType": "jwt",
  "authenticationTypeJwt": true,
  "authenticationTypeOauth2": false,
  "authenticationTypeSession": false,
  "backendType": "Java",
  "baseName": "jhipster",
  "buildDir": "target/",
  "buildTool": "maven",
  "buildToolGradle": false,
  "buildToolMaven": true,
  "buildToolUnknown": false,
  "builtInAuthority": true,
  "builtInUser": true,
  "cacheManagerIsAvailable": false,
  "cacheProvider": "no",
  "cacheProviderCaffeine": false,
  "cacheProviderEhCache": false,
  "cacheProviderHazelcast": false,
  "cacheProviderInfinispan": false,
  "cacheProviderMemcached": false,
  "cacheProviderNo": true,
  "cacheProviderRedis": false,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "clientDistDir": "target/classes/static/",
  "clientFramework": "angular",
  "clientFrameworkAngular": true,
  "clientFrameworkAny": true,
  "clientFrameworkNo": false,
  "clientFrameworkReact": false,
  "clientFrameworkVue": false,
  "clientPackageManager": "npm",
  "clientSrcDir": "src/main/webapp/",
  "clientTestDir": "src/test/javascript/",
  "clientTheme": "none",
  "clientThemeDark": false,
  "clientThemeLight": false,
  "clientThemeNone": true,
  "clientThemePrimary": false,
  "clientThemeVariant": "",
  "communicationSpringWebsocket": false,
  "cucumberTests": false,
  "customizeDestination": [Function],
  "cypressTests": false,
  "dasherizedBaseName": "jhipster",
  "databaseType": "sql",
  "databaseTypeCassandra": false,
  "databaseTypeCouchbase": false,
  "databaseTypeMariadb": false,
  "databaseTypeMongodb": false,
  "databaseTypeMysql": false,
  "databaseTypeNeo4j": false,
  "databaseTypeNo": false,
  "databaseTypePostgres": true,
  "databaseTypeSql": true,
  "defaultEnvironment": "prod",
  "defaultPackaging": "jar",
  "devDatabaseType": "h2Disk",
  "devDatabaseTypeCouchbase": false,
  "devDatabaseTypeH2Any": true,
  "devDatabaseTypeH2Disk": true,
  "devDatabaseTypeH2Memory": false,
  "devDatabaseTypeMariadb": false,
  "devDatabaseTypeMssql": false,
  "devDatabaseTypeMysql": false,
  "devDatabaseTypeOracle": false,
  "devDatabaseTypePostgres": false,
  "devServerPort": 4200,
  "dockerContainers": Object {
    "elasticsearch": "'ELASTICSEARCH_VERSION'",
    "elasticsearchImage": "'ELASTICSEARCH_IMAGE_VERSION'",
    "elasticsearchTag": "'ELASTICSEARCH_TAG_VERSION'",
    "keycloak": "'KEYCLOAK_VERSION'",
    "keycloakImage": "'KEYCLOAK_IMAGE_VERSION'",
    "keycloakTag": "'KEYCLOAK_TAG_VERSION'",
    "postgres": "'POSTGRES_VERSION'",
    "postgresql": "'POSTGRESQL_VERSION'",
    "postgresqlImage": "'POSTGRESQL_IMAGE_VERSION'",
    "postgresqlTag": "'POSTGRESQL_TAG_VERSION'",
    "quay.io/keycloak/keycloak": "'QUAY_IO_KEYCLOAK_KEYCLOAK_VERSION'",
  },
  "dockerServicesDir": "src/main/docker/",
  "domains": Array [
    "com.mycompany.myapp",
  ],
  "dtoSuffix": "DTO",
  "embeddableLaunchScript": undefined,
  "enableGradleEnterprise": false,
  "enableHibernateCache": false,
  "enableI18nRTL": false,
  "enableLiquibase": true,
  "enableSwaggerCodegen": undefined,
  "enableTranslation": true,
  "endpointPrefix": "",
  "entitySuffix": "",
  "fakerSeed": undefined,
  "frontendAppName": "jhipsterApp",
  "gatewayServerPort": undefined,
  "gatlingTests": false,
  "gradleEnterpriseHost": undefined,
  "hipster": "jhipster_family_member_3",
  "humanizedBaseName": "JHipster",
  "incrementalChangelog": undefined,
  "javaDependencies": Object {
    "jib-maven-plugin": "'JIB-MAVEN-PLUGIN-VERSION'",
    "liquibase": "'LIQUIBASE-VERSION'",
  },
  "javaPackageSrcDir": "src/main/java/com/mycompany/myapp/",
  "javaPackageTestDir": "src/test/java/com/mycompany/myapp/",
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhiTablePrefix": "jhi",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": "7.9.3",
  "jwtSecretKey": Any<String>,
  "languages": Array [
    "en",
    "fr",
  ],
  "lowercaseBaseName": "jhipster",
  "mainClass": "JhipsterApp",
  "mainJavaDir": "src/main/java/",
  "mainJavaPackageDir": "src/main/java/com/mycompany/myapp/",
  "mainJavaResourceDir": "src/main/resources/",
  "messageBroker": false,
  "messageBrokerKafka": false,
  "microfrontend": false,
  "microfrontends": Array [],
  "nativeLanguage": "en",
  "nodeDestinationVersion": "16.17.0",
  "nodePackageManager": "npm",
  "otherModules": Array [],
  "packageFolder": "com/mycompany/myapp",
  "packageName": "com.mycompany.myapp",
  "pages": Array [],
  "prettierExtensions": "md,json,yml,html,cjs,mjs,js,ts,tsx,css,scss,java",
  "prettierJava": undefined,
  "prettierTabWidth": 2,
  "prodDatabaseType": "postgresql",
  "prodDatabaseTypeCouchbase": false,
  "prodDatabaseTypeH2Disk": false,
  "prodDatabaseTypeMariadb": false,
  "prodDatabaseTypeMongodb": false,
  "prodDatabaseTypeMssql": false,
  "prodDatabaseTypeMysql": false,
  "prodDatabaseTypeNeo4j": false,
  "prodDatabaseTypeOracle": false,
  "prodDatabaseTypePostgres": true,
  "projectDescription": "Description for jhipster",
  "projectVersion": "0.0.1-SNAPSHOT",
  "protractorTests": false,
  "reactive": true,
  "rememberMeKey": undefined,
  "remotes": Array [],
  "searchEngine": false,
  "searchEngineAny": false,
  "searchEngineCouchbase": false,
  "searchEngineElasticsearch": false,
  "serverPort": "8080",
  "serviceDiscoveryAny": true,
  "serviceDiscoveryConsul": false,
  "serviceDiscoveryEureka": true,
  "serviceDiscoveryType": "eureka",
  "skipCheckLengthOfIdentifier": false,
  "skipClient": false,
  "skipCommitHook": undefined,
  "skipFakeData": false,
  "skipJhipsterDependencies": false,
  "skipServer": undefined,
  "skipUserManagement": false,
  "srcMainDir": "src/main/",
  "srcMainJava": "src/main/java/",
  "srcMainResources": "src/main/resources/",
  "srcMainWebapp": "src/main/webapp/",
  "srcTestDir": "src/test/",
  "srcTestJava": "src/test/java/",
  "srcTestJavascript": "src/test/javascript/",
  "srcTestResources": "src/test/resources/",
  "temporaryDir": "target/",
  "testFrameworks": Array [],
  "testJavaDir": "src/test/java/",
  "testJavaPackageDir": "src/test/java/com/mycompany/myapp/",
  "testResourceDir": "src/test/resources/",
  "testsNeedCsrf": false,
  "upperFirstCamelCaseBaseName": "Jhipster",
  "user": Any<Object>,
  "userPrimaryKeyTypeString": false,
  "userPrimaryKeyTypeUUID": false,
  "webappLoginRegExp": "^[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\\\\\.[a-zA-Z0-9-]+)*$|^[_.@A-Za-z0-9-]+$",
  "websocket": false,
  "withAdminUi": true,
}
`;

exports[`JHipster app generator with microservice should match snapshot 1`] = `
Object {
  "ANGULAR": "angular",
  "BUILD_DIR": "target/",
  "CLIENT_DIST_DIR": "target/classes/static/",
  "CLIENT_WEBPACK_DIR": "webpack/",
  "DIST_DIR": "target/classes/static/",
  "DOCKER_CONSUL": "consul:1.13.1",
  "DOCKER_CONSUL_CONFIG_LOADER": "jhipster/consul-config-loader:v0.4.1",
  "DOCKER_DIR": "src/main/docker/",
  "DOCKER_GRAFANA": "grafana/grafana:9.1.0",
  "DOCKER_JAVA_JRE": "eclipse-temurin:11-jre-focal",
  "DOCKER_JHIPSTER_CONTROL_CENTER": "jhipster/jhipster-control-center:v0.5.0",
  "DOCKER_JHIPSTER_REGISTRY": "jhipster/jhipster-registry:v7.4.0",
  "DOCKER_PROMETHEUS": "prom/prometheus:v2.38.0",
  "DOCKER_SONAR": "sonarqube:9.6.1-community",
  "DOCKER_SWAGGER_EDITOR": "swaggerapi/swagger-editor:latest",
  "DOCKER_ZIPKIN": "openzipkin/zipkin:2.23",
  "DOCKER_ZOOKEEPER": "confluentinc/cp-zookeeper:7.2.1",
  "DOCUMENTATION_ARCHIVE_PATH": "/documentation-archive/",
  "DOCUMENTATION_URL": "https://www.jhipster.tech",
  "HIBERNATE_VERSION": "5.6.10.Final",
  "JACKSON_DATABIND_NULLABLE_VERSION": "0.2.3",
  "JACOCO_VERSION": "0.8.8",
  "JAVA_COMPATIBLE_VERSIONS": Array [
    "11",
    "12",
    "13",
    "14",
    "15",
    "16",
    "17",
    "18",
  ],
  "JAVA_VERSION": "11",
  "JHIPSTER_DEPENDENCIES_VERSION": "7.9.4-SNAPSHOT",
  "LOGIN_REGEX": "^(?>[a-zA-Z0-9!$&*+=?^_\`{|}~.-]+@[a-zA-Z0-9-]+(?:\\\\\\\\.[a-zA-Z0-9-]+)*)|(?>[_.@A-Za-z0-9-]+)$",
  "MAIN_DIR": "src/main/",
  "MAIN_SRC_DIR": "src/main/webapp/",
  "NODE_VERSION": "16.17.0",
  "NPM_VERSION": "8.19.2",
  "REACT": "react",
  "SERVER_MAIN_RES_DIR": "src/main/resources/",
  "SERVER_MAIN_SRC_DIR": "src/main/java/",
  "SERVER_TEST_RES_DIR": "src/test/resources/",
  "SERVER_TEST_SRC_DIR": "src/test/java/",
  "SPRING_BOOT_VERSION": "2.7.3",
  "TEST_DIR": "src/test/",
  "VUE": "vue",
  "applicationType": "microservice",
  "applicationTypeGateway": false,
  "applicationTypeMicroservice": true,
  "applicationTypeMonolith": false,
  "authenticationType": "jwt",
  "authenticationTypeJwt": true,
  "authenticationTypeOauth2": false,
  "authenticationTypeSession": false,
  "backendType": "Java",
  "baseName": "jhipster",
  "buildDir": "target/",
  "buildTool": "maven",
  "buildToolGradle": false,
  "buildToolMaven": true,
  "buildToolUnknown": false,
  "builtInAuthority": false,
  "builtInUser": false,
  "cacheManagerIsAvailable": true,
  "cacheProvider": "hazelcast",
  "cacheProviderCaffeine": false,
  "cacheProviderEhCache": false,
  "cacheProviderHazelcast": true,
  "cacheProviderInfinispan": false,
  "cacheProviderMemcached": false,
  "cacheProviderNo": false,
  "cacheProviderRedis": false,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "clientDistDir": "target/classes/static/",
  "clientFramework": "no",
  "clientFrameworkAngular": false,
  "clientFrameworkAny": false,
  "clientFrameworkNo": true,
  "clientFrameworkReact": false,
  "clientFrameworkVue": false,
  "clientPackageManager": "npm",
  "clientSrcDir": "src/main/webapp/",
  "clientTestDir": "src/test/javascript/",
  "clientTheme": undefined,
  "clientThemeDark": false,
  "clientThemeLight": false,
  "clientThemeNone": false,
  "clientThemePrimary": false,
  "clientThemeVariant": undefined,
  "communicationSpringWebsocket": false,
  "cucumberTests": false,
  "customizeDestination": [Function],
  "cypressTests": false,
  "dasherizedBaseName": "jhipster",
  "databaseType": "sql",
  "databaseTypeCassandra": false,
  "databaseTypeCouchbase": false,
  "databaseTypeMariadb": false,
  "databaseTypeMongodb": false,
  "databaseTypeMysql": false,
  "databaseTypeNeo4j": false,
  "databaseTypeNo": false,
  "databaseTypePostgres": true,
  "databaseTypeSql": true,
  "defaultEnvironment": "prod",
  "defaultPackaging": "jar",
  "devDatabaseType": "h2Disk",
  "devDatabaseTypeCouchbase": false,
  "devDatabaseTypeH2Any": true,
  "devDatabaseTypeH2Disk": true,
  "devDatabaseTypeH2Memory": false,
  "devDatabaseTypeMariadb": false,
  "devDatabaseTypeMssql": false,
  "devDatabaseTypeMysql": false,
  "devDatabaseTypeOracle": false,
  "devDatabaseTypePostgres": false,
  "devServerPort": undefined,
  "dockerContainers": Object {
    "elasticsearch": "'ELASTICSEARCH_VERSION'",
    "elasticsearchImage": "'ELASTICSEARCH_IMAGE_VERSION'",
    "elasticsearchTag": "'ELASTICSEARCH_TAG_VERSION'",
    "keycloak": "'KEYCLOAK_VERSION'",
    "keycloakImage": "'KEYCLOAK_IMAGE_VERSION'",
    "keycloakTag": "'KEYCLOAK_TAG_VERSION'",
    "postgres": "'POSTGRES_VERSION'",
    "postgresql": "'POSTGRESQL_VERSION'",
    "postgresqlImage": "'POSTGRESQL_IMAGE_VERSION'",
    "postgresqlTag": "'POSTGRESQL_TAG_VERSION'",
    "quay.io/keycloak/keycloak": "'QUAY_IO_KEYCLOAK_KEYCLOAK_VERSION'",
  },
  "dockerServicesDir": "src/main/docker/",
  "domains": Array [
    "com.mycompany.myapp",
  ],
  "dtoSuffix": "DTO",
  "embeddableLaunchScript": undefined,
  "enableGradleEnterprise": false,
  "enableHibernateCache": true,
  "enableI18nRTL": false,
  "enableLiquibase": true,
  "enableSwaggerCodegen": undefined,
  "enableTranslation": true,
  "endpointPrefix": "services/jhipster",
  "entitySuffix": "",
  "fakerSeed": undefined,
  "frontendAppName": "jhipsterApp",
  "gatewayServerPort": undefined,
  "gatlingTests": false,
  "gradleEnterpriseHost": undefined,
  "hipster": "jhipster_family_member_3",
  "humanizedBaseName": "JHipster",
  "incrementalChangelog": undefined,
  "javaDependencies": Object {
    "jib-maven-plugin": "'JIB-MAVEN-PLUGIN-VERSION'",
    "liquibase": "'LIQUIBASE-VERSION'",
  },
  "javaPackageSrcDir": "src/main/java/com/mycompany/myapp/",
  "javaPackageTestDir": "src/test/java/com/mycompany/myapp/",
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhiTablePrefix": "jhi",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": "7.9.3",
  "jwtSecretKey": Any<String>,
  "languages": Array [
    "en",
    "fr",
  ],
  "lowercaseBaseName": "jhipster",
  "mainClass": "JhipsterApp",
  "mainJavaDir": "src/main/java/",
  "mainJavaPackageDir": "src/main/java/com/mycompany/myapp/",
  "mainJavaResourceDir": "src/main/resources/",
  "messageBroker": false,
  "messageBrokerKafka": false,
  "microfrontend": false,
  "microfrontends": Array [],
  "nativeLanguage": "en",
  "nodeDestinationVersion": "16.17.0",
  "nodePackageManager": "npm",
  "otherModules": Array [],
  "packageFolder": "com/mycompany/myapp",
  "packageName": "com.mycompany.myapp",
  "pages": Array [],
  "prettierExtensions": "md,json,yml,html,cjs,mjs,js,ts,tsx,css,scss,java",
  "prettierJava": undefined,
  "prettierTabWidth": 2,
  "prodDatabaseType": "postgresql",
  "prodDatabaseTypeCouchbase": false,
  "prodDatabaseTypeH2Disk": false,
  "prodDatabaseTypeMariadb": false,
  "prodDatabaseTypeMongodb": false,
  "prodDatabaseTypeMssql": false,
  "prodDatabaseTypeMysql": false,
  "prodDatabaseTypeNeo4j": false,
  "prodDatabaseTypeOracle": false,
  "prodDatabaseTypePostgres": true,
  "projectDescription": "Description for jhipster",
  "projectVersion": "0.0.1-SNAPSHOT",
  "protractorTests": false,
  "reactive": false,
  "rememberMeKey": undefined,
  "remotes": Array [],
  "searchEngine": false,
  "searchEngineAny": false,
  "searchEngineCouchbase": false,
  "searchEngineElasticsearch": false,
  "serverPort": "8081",
  "serviceDiscoveryAny": true,
  "serviceDiscoveryConsul": false,
  "serviceDiscoveryEureka": true,
  "serviceDiscoveryType": "eureka",
  "skipCheckLengthOfIdentifier": false,
  "skipClient": true,
  "skipCommitHook": undefined,
  "skipFakeData": false,
  "skipJhipsterDependencies": false,
  "skipServer": undefined,
  "skipUserManagement": true,
  "srcMainDir": "src/main/",
  "srcMainJava": "src/main/java/",
  "srcMainResources": "src/main/resources/",
  "srcMainWebapp": "src/main/webapp/",
  "srcTestDir": "src/test/",
  "srcTestJava": "src/test/java/",
  "srcTestJavascript": "src/test/javascript/",
  "srcTestResources": "src/test/resources/",
  "temporaryDir": "target/",
  "testFrameworks": Array [],
  "testJavaDir": "src/test/java/",
  "testJavaPackageDir": "src/test/java/com/mycompany/myapp/",
  "testResourceDir": "src/test/resources/",
  "testsNeedCsrf": false,
  "upperFirstCamelCaseBaseName": "Jhipster",
  "websocket": false,
  "withAdminUi": false,
}
`;
